Remoção do collectors para toList